2009-12-12  Christopher Bratusek <zanghar@freenet.de>
	* README.IMPORTANT: updated

2009-12-12  Teika Kazura <teika@lavabit.com>
	* man/faq.texi
	* man/news.texi
	* man/sawfish.texi: Doc for poweroff.

	* man/sawfish.texi: Small reorganization.

	* lisp/sawfish/wm/util/compat.jl: Outdated part deletion.
	                                  Declaration as obsolete for 'sawfish-directory' and so on are not necessary now, after purge of 'sawmill'.
	                                  Deleted codes are harmless, but confusing.

	* OPTIONS
	* lisp/sawfish/wm/integration/gnome.jl
	* lisp/sawfish/wm/integration/kde.jl
	* lisp/sawfish/wm/integration/standalone.jl
	* lisp/sawfish/wm/user.jl
	* man/news.texi: Poweroff refinements. Describes the option if you want poweroff menu. Option "extra-session-menu" is renamed to 'want-poweroff-menu'.

2009-12-08  Christopher Bratusek <zanghar@freenet.de>
	* debian/rules
	* debian/control: depend on automake rather than on automake1.10

2009-12-07  Christopher Bratusek <zanghar@freenet.de>
	* man/Makefile.in: don't hardcode /usr in manpage installation path

2009-12-05  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/x-cycle.jl: make cycle-class don't ignore window-order [Daniel M. German]

	* lisp/sawfish/wm/ext/window-history.jl: more commands in the window-history-menu

	* lisp/sawfish/wm/commands/launcher.jl: addded structure alias

	* OPTIONS
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/defaults.jl
	* lisp/sawfish/wm/commands/poweroff.jl
	* lisp/sawfish/wm/integration/gnome.jl
	* lisp/sawfish/wm/integration/kde.jl
	* lisp/sawfish/wm/integration/standalone.jl
	* lisp/sawfish/wm/user.jl
	* man/sawfish.texi: Added poweroff command for letting none KDE/GNOME users easily
	                    reboot, halt, suspend or hibernate their machine. The commands
			    beeing used to do so are also user-settable. In addition, when
			    it's used to reboot or halt, when we call the `before-exit-hook'