@@ -1,6 +1,9 @@
 2009-12-12  Christopher Bratusek <zanghar@freenet.de>
 	* README.IMPORTANT: updated
 
+	* lisp/sawfish/wm/autoload.jl
+	* lisp/sawfish/wm/menus.jl: added popup-window-list-menu command
+
 2009-12-12  Teika Kazura <teika@lavabit.com>
 	* man/faq.texi
 	* man/news.texi
